# ToxPipe-Model-Comparison

./: .env.example  .gitignore  .nojekyll  .prettier  .prettierrc.yaml  README.md  _quarto.yml  about.html  example.env  index.html  index.qmd  listings.json  ntp-base.scss  ntpweb-shared.css  package-lock.json  pyproject.toml  robots.txt  search.json  sitemap.xml  tools.html  tools.qmd
abt-question-ocr/: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
abt-question-ocr/codes/: combine_pdfs.ipynb  extract_questions.py  test.txt
abt-question-ocr/notebooks/: combine_pdfs.ipynb
abt-question-ocr/results/: abt_qa.csv  abt_qa_wo_noise.csv  combined_answers_from_nonpdfs.csv  combined_answers_from_nonpdfs.xlsx  combined_qa.csv
abt-question-ocr/src/: extract_questions.py  utils.py
eval-app/: .gitignore  Dockerfile  app.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt  utils.py
eval-app/app-modules/: db.env  db.py  example.db.env  module_common.py  module_compare_evals_by_graph.py  module_compare_evals_by_prompt.py  module_compare_evals_by_table.py  module_create_and_run_eval.py  module_create_eval.py  module_graph_eval.py  module_run_eval.py  module_show_eval.py  test.ipynb  utils.py
eval-app/cache/: compare_evals_by_table.csv  compare_evals_by_table_headers.json
eval-app/codes/: analyze_responses.ipynb  create_promptfoo_config.py  create_tests_with_assertion.ipynb  evaluate.py  utils.py  (+3 more)
reports/: .Rhistory  .gitignore  2024-03-29-initial-prompts.html  2024-03-29-initial-prompts.qmd  2024-04-02-langchain-multiple-prompt.html  2024-04-02-langchain-multiple-prompt.qmd  2024-04-10-promptfoo-trial.html  2024-04-10-promptfoo-trial.qmd  2024-04-11-promptfoo-initial-test.yml  2024-04-12-multi-agent-testing.html  2024-04-12-multi-agent-testing.qmd  2024-05-02-sourcegraphai-exploration.html  2024-05-02-sourcegraphai-exploration.qmd  2024-05-16-promptfoo-output-test.html  2024-05-16-promptfoo-output-test.qmd  2024-05-17-promptfoo-parsing-test.html  2024-05-17-promptfoo-parsing-test.qmd  2024-05-18-promptfoo-output-test.html  2024-05-18-promptfoo-output-test.qmd  2024-05-29-abt-question-ocr.html  2024-05-29-abt-question-ocr.qmd  2024-06-26-ecsa_gara_challenge.html  2024-06-26-ecsa_gara_challenge.qmd  2024-12-02-CSCE.qmd  README.md  _environment  _quarto.yml  abt-question-ocr.qmd  ecsa_gara_challenge.html  ecsa_gara_challenge.qmd  eval.ipynb  eval.qmd  eval.quarto_ipynb  eval_app.qmd  example.env  index.html  index.qmd  multi-agent-testing.qmd  promptfoo-eval-parsing.html  promptfoo-output-template.html  (+1 more)
(+1102 files in other folders)
