[project]
name = "toxpipe-model-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "amazon-textract-caller>=0.2.4",
    "amazon-textract-textractor>=1.9.2",
    "boto3>=1.40.23",
    "httpx==0.28.1",
    "ipykernel==6.29.5",
    "langchain==0.3.12",
    "langchain-core==0.3.25",
    "langchain-openai==0.2.12",
    "langchain-community>=0.3.12",
    "langsmith==0.2.3",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
    "truststore==0.10.1",
    "tabulate==0.9.0"
]
