[project]
name = "toxpipe-model-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "faicons==0.2.2",
    "httpx==0.28.1",
    "ipykernel==6.29.5",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "pymongo==4.14.1",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "scikit-learn==1.6.0",
    "shiny==1.5.0",
    "shinywidgets==0.7.0",
    "sqlalchemy==2.0.36",
    "tqdm==4.67.1",
    "truststore==0.10.1",
    "pydantic==2.9.2",
    "plotly[express]==6.4.0",
    "anywidget==0.9.18",
    "nbformat==5.10.4",
    "langchain==0.3.27",
    "langchain-core==0.3.76",
    "langchain-openai==0.3.33",
]
