[project]
name = "toxpipe-model-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "ipykernel==6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab-quarto>=0.3.5",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
    "tabulate==0.9.0",
]
